force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <label>Incident</label>
    <nameField>
        <displayFormat>Incident-{0}</displayFormat>
        <label>Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>