force-app/main/default/objects/Incident__c/fields/Care_Description__c.field-meta.xml
<CustomField>
    <fullName>Care_Description__c</fullName>
    <inlineHelpText>If necessary, describe the care provided.</inlineHelpText>
    <label>Care Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>