force-app/main/default/objects/Incident__c/fields/Care_Provided__c.field-meta.xml
<CustomField>
    <fullName>Care_Provided__c</fullName>
    <label>Care Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Gloves/PPE Used</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>Water Rescue</fullName>
            </value>
            <value>
                <fullName>Ventilations Given</fullName>
            </value>
            <value>
                <fullName>CPR</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>Emergency Oxygen</fullName>
            </value>
            <value>
                <fullName>Prescription Medication Assistance</fullName>
            </value>
            <value>
                <fullName>Diabetic Care</fullName>
            </value>
            <value>
                <fullName>EpiPen Assistance</fullName>
            </value>
            <value>
                <fullName>Head/Neck/Spinal Care</fullName>
            </value>
            <value>
                <fullName>Bleeding Control</fullName>
            </value>
            <value>
                <fullName>Splint</fullName>
            </value>
            <value>
                <fullName>Insect Sting Relief</fullName>
            </value>
            <value>
                <fullName>Ice Pack</fullName>
            </value>
            <value>
                <fullName>Aspirin</fullName>
            </value>
            <value>
                <fullName>Shock Control</fullName>
            </value>
            <value>
                <fullName>Cooled Victim</fullName>
            </value>
            <value>
                <fullName>Heated Up Victim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>