force-app/main/default/objects/Incident__c/fields/EAP_Used__c.field-meta.xml
<CustomField>
    <fullName>EAP_Used__c</fullName>
    <label>EAP Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water Rescue</fullName>
            </value>
            <value>
                <fullName>Land Emergency</fullName>
            </value>
            <value>
                <fullName>Active Shooter</fullName>
            </value>
            <value>
                <fullName>Missing Person</fullName>
            </value>
            <value>
                <fullName>Severe Weather</fullName>
            </value>
            <value>
                <fullName>Intruder</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>