force-app/main/default/objects/Incident__c/fields/Incident_Area__c.field-meta.xml
<CustomField>
    <fullName>Incident_Area__c</fullName>
    <label>Incident Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Deck</fullName>
            </value>
            <value>
                <fullName>Indoors</fullName>
            </value>
            <value>
                <fullName>Parking Lot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>