force-app/main/default/objects/Incident__c/fields/Incident_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Time__c</fullName>
    <label>Incident Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>