force-app/main/default/objects/Incident__c/fields/Location_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Incident__c</fullName>
    <label>Location of Incident</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Incident_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pool - Diving Well</fullName>
            </value>
            <value>
                <fullName>Pool - Lap Lanes</fullName>
            </value>
            <value>
                <fullName>Pool - Splash Pad</fullName>
            </value>
            <value>
                <fullName>Pool - Catch Area</fullName>
            </value>
            <value>
                <fullName>Deck - Viewing Gallery Left</fullName>
            </value>
            <value>
                <fullName>Deck - Viewing Gallery Right</fullName>
            </value>
            <value>
                <fullName>Deck - Viewing Gallery Center</fullName>
            </value>
            <value>
                <fullName>Deck - Slides</fullName>
            </value>
            <value>
                <fullName>Deck - Entry</fullName>
            </value>
            <value>
                <fullName>Indoors - Guard Hut</fullName>
            </value>
            <value>
                <fullName>Indoors - Women&apos;s Locker Room</fullName>
            </value>
            <value>
                <fullName>Indoors - Men&apos;s Locker Room</fullName>
            </value>
            <value>
                <fullName>Indoors - Pump Room</fullName>
            </value>
            <value>
                <fullName>Parking Lot - Parking Area</fullName>
            </value>
            <value>
                <fullName>Parking Lot - Walkway</fullName>
            </value>
            <value>
                <fullName>Parking Lot - Gate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>