force-app/main/default/objects/Incident__c/fields/Rescuer__c.field-meta.xml
<CustomField>
    <fullName>Rescuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescuer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>