force-app/main/default/objects/Incident__c/fields/Victim__c.field-meta.xml
<CustomField>
    <fullName>Victim__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Victim</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Victim)</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>