force-app/main/default/objects/Incident__c/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Witness</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Witness)</relationshipLabel>
    <relationshipName>Incidents_Witnessed</relationshipName>
    <type>Lookup</type>
</CustomField>