force-app/main/default/objects/Incident__c/fields/X911_Called__c.field-meta.xml
<CustomField>
    <fullName>X911_Called__c</fullName>
    <defaultValue>false</defaultValue>
    <label>911 Called?</label>
    <type>Checkbox</type>
</CustomField>