force-app/main/default/objects/Incident__c/recordTypes/Emergency_Incident.recordType-meta.xml
<RecordType>
    <fullName>Emergency_Incident</fullName>
    <active>true</active>
    <description>This record type is for Emergencies only.</description>
    <label>Emergency Incident</label>
</RecordType>