force-app/main/default/objects/Incident__c/recordTypes/Major_Incident.recordType-meta.xml
<RecordType>
    <fullName>Major_Incident</fullName>
    <active>true</active>
    <description>This record type is for Major incidents only.</description>
    <label>Major Incident</label>
</RecordType>