force-app/main/default/objects/Incident__c/recordTypes/Minor_Incident.recordType-meta.xml
<RecordType>
    <fullName>Minor_Incident</fullName>
    <active>true</active>
    <description>This record type is for Minor incidents.</description>
    <label>Minor Incident</label>
</RecordType>