force-app/main/default/objects/Incident__c/validationRules/Time_of_incident_must_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_of_incident_must_be_in_the_past</fullName>
    <active>true</active>
    <description>The time an incident takes place cannot be in the future</description>
    <errorConditionFormula>Incident_Time__c &gt; NOW() + 2/24</errorConditionFormula>
    <errorDisplayField>Incident_Time__c</errorDisplayField>
    <errorMessage>Incident time cannot be in the future.</errorMessage>
</ValidationRule>