force-app/main/default/objects/Incident__c/validationRules/Victim_Cannot_Be_A_Witness.validationRule-meta.xml
<ValidationRule>
    <fullName>Victim_Cannot_Be_A_Witness</fullName>
    <active>true</active>
    <description>Victims cannot be the same person as a witness.</description>
    <errorConditionFormula>Victim__r.Id  =  Witness__r.Id</errorConditionFormula>
    <errorDisplayField>Witness__c</errorDisplayField>
    <errorMessage>A victim cannot be a witness.</errorMessage>
</ValidationRule>